<resources>
    <string name="app_name">RealProgrammers</string>
    <string name="title_activity_programmers_list">Programmers</string>
    <string name="title_activity_programmer_edit">New Programmer</string>
    <string name="title_activity_programmer_detail">Programmer</string>
    <string name="name_title">Name</string>
    <string name="emacs_title">Emacs Knowledge</string>
    <string name="caffeine_title">Caffeine Ingestion</string>
    <string name="rpr_title">Real Programmer Rating</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_delete_programmer">Do you really want to delete this programmer info?</string>
    <string name="confirm_title">Confirm deletion</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirm_discard_changes">Do you really want to discard the changes?</string>
    <string name="dont_discard">Keep editing</string>
    <string name="firstname_edit_text_hint_programmer_edit">Programmer\'s First Name</string>
    <string name="lastname_edit_text_hint_programmer_edit">Programmer\'s Last Name</string>

    <string name="emacs_lowest_value">Barely can close it</string>
    <string name="emacs_low_value">Tutorial done</string>
    <string name="emacs_medium_value">Customized .emacs</string>
    <string name="emacs_high_value">Org-mode for everything</string>
    <string name="emacs_highest_value">M-x butterfly</string>
    <string name="caffeine_lowest_value">No coffee</string>
    <string name="caffeine_low_value">A coffee in the morning</string>
    <string name="caffeine_medium_value">Two or three coffees to get ready</string>
    <string name="caffeine_high_value">A coffee every 3 hours</string>
    <string name="caffeine_highest_value">Non stop drinking coffee</string>

</resources>
