<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_programmer_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/first_name_text_view_programmer_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <ToggleButton
                    android:id="@+id/favorite_toggle_button_programmer_detail"
                    style="@style/favoriteToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@drawable/selector_favorite_toggle"
                    android:backgroundTint="@color/colorAccent"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/last_name_text_view_programmer_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Emacs Knowledge -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emacs_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/emacs_text_view_programmer_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <!-- Caffeine Ingestion -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caffeine_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/caffeine_text_view_programmer_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <!-- Real Programmer Rating -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rpr_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RatingBar
                android:id="@+id/rpr_rating_bar_programmer_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
